--- a/index.html
+++ b/index.html
@@ -43,11 +43,18 @@
         <h3>THE HOUSE PICKED</h3>
       </div>
      <div class="imgs">
-      <img class="paper" src="./images/icon-paper.svg" alt="">
-    <div class="space"></div>
+      <div class="selected_img"></div>
+
+      <div class="result">
+        <h1>YOU WIN!</h1>
+      <button class="btn" onclick="restart()">PLAY AGAİN</button>
+      </div>
+      
+      <div class="space"></div>
      </div>
     </div>
 
+    
 
     <div class="rules">
        <button>RULES</button>
