--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
     <div class="score">
         <h1>ROCK <br> PAPER <br> SCISSORS</h1>
-        <div class="point"><h6>SCORE</h6> <span>12</span></div>
+        <div class="point"><h6>SCORE</h6> <span>0</span></div>
     </div>
 
     <div class="secret">
@@ -46,7 +46,7 @@
       <div class="selected_img"></div>
 
       <div class="result">
-        <h1>YOU WIN!</h1>
+        <h1 class="win">YOU WIN!</h1>
       <button class="btn" onclick="restart()">PLAY AGAİN</button>
       </div>
       
